k8s/traefik/overlays/prod/resources/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
spec:
  ports:
    - name: dashboard-http
      port: 80
      targetPort: traefik
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-forward-auth
spec:
  ports:
    - name: traefik-forward-auth
      port: 80
      targetPort: 4181
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-prometheus
spec:
  ports:
    - name: metrics
      port: 9100
      targetPort: traefik
  type: ClusterIP
