k8s/traefik/overlays/prod/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
    # Next field is required but doesn't matter
    external-dns.alpha.kubernetes.io/hostname: auth.k8s.qt.rs
    external-dns.alpha.kubernetes.io/target: k8s.qt.rs
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - traefik.k8s.qt.rs
        - auth.k8s.qt.rs
      secretName: traefik-k8s-qt-rs-tls
  rules:
    - host: traefik.k8s.qt.rs
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-dashboard
                port:
                  number: 80
    - host: auth.k8s.qt.rs
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: traefik-forward-auth
              port:
                number: 80
